--- a/port.css
+++ b/port.css
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  max-width: 100vw;
+
   overflow-x: hidden;
   background-color: #fdfdfd;
   color: #333;
@@ -44,7 +44,7 @@ nav {
 .logo a {
   font-size: 1.8rem;
   font-weight: 600;
-  color: #1e40af;
+  color: rgb(26, 148, 230);
 }
 
 .menu {
@@ -61,7 +61,7 @@ nav {
 }
 
 .menu li a:hover {
-  color: #1e40af;
+  color: rgb(26, 148, 230);
 }
 
 .menu-btn,
@@ -70,19 +70,19 @@ nav {
 }
 .home {
   min-height: 100vh;
-  background: linear-gradient(to right, #eef2ff, #f0f8ff);
+  background: linear-gradient(to right ,#fff ,rgb(26, 148, 230));
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 100px 20px 60px;
+  padding: 100px 0px 0px;
   position: relative;
   text-align: center;
 }
 
 .home-content {
-  max-width: 800px;
-  padding: 30px;
-  background: white;
+  max-width: 500px;
+  padding: 10px;
+  background: linear-gradient(#fff ,rgb(26, 148, 230));
   border-radius: 20px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
 }
@@ -115,9 +115,7 @@ nav {
   margin-top: 8px;
 }
 
-.home .button {
-  margin-top: 25px;
-}
+
 
 .home .button button {
   padding: 12px 28px;
@@ -182,7 +180,7 @@ section {
 }
 
 .about .left img {
-  max-width: 100%;
+  max-width: 80%;
   border-radius: 10px;
 }
 
